--- a/chassis/MDK-ARM/.vscode/settings.json
+++ b/chassis/MDK-ARM/.vscode/settings.json
@@ -2,7 +2,9 @@
     "files.associations": {
         "gimbal_behaviour.h": "c",
         "chassis_behaviour.h": "c",
-        "chassis_task.h": "c"
+        "chassis_task.h": "c",
+        "chassis_power_control.h": "c",
+        "referee.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
