--- a/sentry/MDK-ARM/standard_gimbal.uvprojx
+++ b/sentry/MDK-ARM/standard_gimbal.uvprojx
@@ -570,16 +570,16 @@
               <FileType>1</FileType>
               <FilePath>..\application\chassis_behaviour.c</FilePath>
             </File>
-            <File>
-              <FileName>chassis_behaviour.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\application\chassis_behaviour.h</FilePath>
-            </File>
           </Files>
         </Group>
         <Group>
           <GroupName>module</GroupName>
           <Files>
+            <File>
+              <FileName>can_comm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\module\can_comm\can_comm.c</FilePath>
+            </File>
             <File>
               <FileName>CRC8_CRC16.c</FileName>
               <FileType>1</FileType>
